# kattis

./: .gitignore  CMakeLists.txt  README.md  template.cpp
0-1_sequences/: 0-1_sequences  0-1_sequences.cpp  correct.cpp  sample.txt
Buying Coke/: CMakeLists.txt
Buying Coke/src/: buying-coke.cpp
Buying Coke/tests/: a.out  demo.cpp
buying-coke/: buying-coke.cpp
consecutive-sum/: consecutive-sum.py
detaileddifferences/: main.py
ofugsnuid/: Main.java
